reduce latency down to 3-5 seconds

--- a/LiveStreamingServer/LiveStreamingServer/index.html
+++ b/LiveStreamingServer/LiveStreamingServer/index.html
@@ -15,8 +15,7 @@
             var player = videojs('player', {
                 controls: true,
                 width: 640,
-                height: 480,
-                autoplay: true
+                height: 480
             }, function () { });
 			player.play();
     </script>
